fix spacing

--- a/public/profile/index.css
+++ b/public/profile/index.css
@@ -14,10 +14,15 @@ img {
 
 .card {
     width: 300px;
+    margin: 0 8px 0 8px;
 }
 
 .row-description {
     height: 200px;
+}
+
+p {
+    height: 130px;
 }
 
 .btn {
